2006-08-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add (rather conservative) write delay timing
	values to the *fuse and lock memory spaces of all devices where
	they have been missing.  Add the lock memory space to the ATmega48
	section.
	Closes bug #14920: tiny2313 fuses and AVRDUDE 5.0
	Closes bug #15751: atmega48: no lock bits defined

2006-08-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix the size of the calibration memory space
	for ATtiny13, ATmega64, ATmega16, ATmega32, ATmega8535, ATtiny25,
	ATtiny45, ATtiny85.
	Closes bug #17383: Wrong calibration section in avrdude.conf...

2006-08-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega324): Correct the pagesize from 256 to
	128.
	This closes bug #16410: ATMega164/324/644 cannot be programmed

2006-08-20 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac: Check for gettimeofday().
	* ppiwin.c (gettimeofday): Define gettimeofday() replacement
	only if !defined(HAVE_GETTIMEOFDAY); use correct protype.

2006-08-18 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2: Minor cosmetic changes: STK500 firmware version
	numbers are M.NN, so always display the minor number as two
	digits.  Examine the response to the sign-on command to see which
	programmer hardware we are talking to, and then restrict the
	STK500 topcard display to devices detected as STK500.

2006-08-18 Joerg Wunsch <j@uriah.heep.sax.de>

	* Makefile.am: Add a dist-hook, and make it remove lexer.c,
	config_gram.c, and config_gram.h from the source distribution
	archive.  These files are supposed to be generated on the target
	system.
	Closes bug #15536: avrdude-5.1 compilation fails on Gentoo/amd64

2006-08-17 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: unreverse the argument order for
	CMD_CHIP_ERASE_HVSP; Atmel says AVR068 is right, and
	stk500.exe is wrong.
	* configure.ac (AC_CHECK_LIB[usb]): Fix the generation
	of HAVE_LIBUSB in ac_cfg.h.

2006-08-17 Joerg Wunsch <j@uriah.heep.sax.de>
